--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -5,9 +5,14 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
+              
             - name: Welcome message
               run: echo "Hello Shreyank, 1st Action job"
+
             - name: List files
               run: ls -l
+
             - name: Read File
               run: cat README.md
