--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -7,12 +7,17 @@ jobs:
         steps:
             - name: Checkout repo
               uses: actions/checkout@v4
-              
-            - name: Welcome message
-              run: echo "Hello Shreyank, 1st Action job"
 
-            - name: List files
-              run: ls -l
+            - name: List and Read files # welcome message
+              run: |
+                echo "Hello Shreyank, 1st Action job"
+                ls -ltra
+                cat README.md
+            
+            - name: Generate ASCII Artwork
+              run: cawsay -f dragon "Run for cover, I am SHREYANK....RAWR" >> dragon.txt
+            # - name: List files
+            #   run: ls -l
 
-            - name: Read File
-              run: cat README.md
+            # - name: Read File
+            #   run: cat README.md
