--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -12,7 +12,14 @@ jobs:
           run: ls -ltra
 
         - name: Executing Shell Script
-          run: ./ascii-script.sh
+          run: | 
+               chmod +x ascii-script.sh 
+               ./ascii-script.sh
+
+        # - name: Executing Shell Script
+        #   run: ./ascii-script.sh     just this it will show error saying permission not found
+
+          
         # steps:
         #     - name: Checkout repo
         #       uses: actions/checkout@v4
