--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -2,19 +2,59 @@ name: Generate ASCII Artwork
 on: push
 
 jobs:
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repo
-          uses: actions/checkout@v4
+  build_job_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Cowsay Program
+        run: sudo apt-get install cowsay -y
+      
+      - name: Execute Cowsay CMD
+        run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
-        - name: List Repo Files
-          run: ls -ltra
+      - name: Sleep for 30 Seconds
+        run: sleep 30
 
-        - name: Executing Shell Script
-          run: | 
-               chmod +x ascii-script.sh 
-               ./ascii-script.sh
+  test_job_2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sleep for 10 Seconds
+        run: sleep 10
+
+      - name: Test File Exists
+        run: grep -i "dragon" dragon.txt
+
+  deploy_job_3:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Read File
+        run: cat dragon.txt
+      
+      - name: Deploy
+        run: |
+          echo Deploying.......
+          sleep 2
+          echo Deployed......
+
+
+
+
+
+
+    # first_job:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #     - name: Checkout Repo
+    #       uses: actions/checkout@v4
+
+    #     - name: List Repo Files
+    #       run: ls -ltra
+
+    #     - name: Executing Shell Script
+    #       run: | 
+    #            chmod +x ascii-script.sh 
+    #            ./ascii-script.sh
+
+    
 
         # - name: Executing Shell Script
         #   run: ./ascii-script.sh     just this it will show error saying permission not found
