--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -35,6 +35,9 @@ jobs:
 
       - name: Sleep for 1 Seconds
         run: ls -al #1
+        
+      - name: Sleep for 1 Seconds
+        run: cat dragon.txt#1
 
       - name: Test File Exists
         run: grep -i "dragon" dragon.txt
