--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dragon-text-file
-          path: dragon.txt
+          path: 
 
       - name: Sleep for 1 Seconds
         run: ls -al dragon.txt #1
