--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dragon-text-file
-          path: dragonartifact/dragon.txt
+          path: dragon.txt
   
   test_job_2:
     needs: build_job_1
