--- a/.github/workflows/matrix-config.yml
+++ b/.github/workflows/matrix-config.yml
@@ -24,9 +24,17 @@ jobs:
     
     deploy:
         strategy:
+            fail-fast: false # by default its true, means if a step failed it will not stop steps which are in progress or in quee
+            max-parallel: 2
             matrix:
                 os: [ubuntu-latest,ubuntu-20.04, windows-latest]
                 images: [hello-world, alpine]
+                exclude:
+                    - images: alpine
+                      os: windows-latest
+                include:
+                    - images: amd64/alpine
+                    - os: ubuntu-20.04
         runs-on: ${{ matrix.os}}
         steps:
             - name: Echo Docker Details
