--- a/.github/workflows/using-if-block.yaml
+++ b/.github/workflows/using-if-block.yaml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   exe-if-main:
-    if: 'github.ref == ref/heads/main'
+    if: github.ref == 'ref/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
