--- a/.github/workflows/triggeringworkflow.yml
+++ b/.github/workflows/triggeringworkflow.yml
@@ -2,8 +2,8 @@ name: Exploring Manual Workflow
 
 on: 
     workflow_dispatch: 
-    # schedule:
-    #     - cron: "*/1 * * * *"
+    schedule:
+        - cron: "*/1 * * * *"
 
 env:
     NAME: SHREYANK 
